New Branding and Fix Scroll on marquee

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
-  <link rel="shortcut icon" href="assets/Icons/logo2.svg" type="image/svg">
+  <link rel="shortcut icon" href="assets/logo.svg" type="image/svg">
 </head>
 
 <body>
@@ -63,7 +63,7 @@
           <a href="https://github.com/andev-code"><img src="assets/Icons/github.svg" alt="github link">Github</a>
         </article>
 
-        <h1>J. Andy Echevarria Contreras <span class="tag">no disponible</span></h1>
+        <h1>J. Andy Echevarria Contreras <span class="tag">disponible</span></h1>
 
         <p>Desarrollador que le <b>apasiona</b> crear <b>soluciones</b></p>
 
@@ -138,9 +138,10 @@
 
     <section class="skills" id="habilidades">
       <h2>habilidades</h2>
+      <small>Click sobre las tecnologias para ver a detalle</small>
 
-      <article class="marquee">
-        <div class="imgs-ctn">
+      <article class="marquee" id="marquee">
+        <div class="imgs-ctn" id="firstSkills">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-plain-wordmark.svg" alt="HTML5 logo" title="HTML5" width="80px" height="80px"/>
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-plain-wordmark.svg" alt="css3 logo" title="css3" width="80px" height="80px"/>
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg" alt="javascript logo" title="javascript" width="70px" height="70px"/>
@@ -163,7 +164,7 @@
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/astro/astro-original-wordmark.svg" alt="astro logo" title="astro" width="80px" height="80px"/>
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/bash/bash-plain.svg" alt="bash logo" title="bash" width="80px" height="80px"/>
         </div>
-        <div class="imgs-ctn">
+        <div class="imgs-ctn" id="secondsSkills">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-plain-wordmark.svg" alt="HTML5 logo" title="HTML5" width="80px" height="80px"/>
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-plain-wordmark.svg" alt="css3 logo" title="css3" width="80px" height="80px"/>
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg" alt="javascript logo" title="javascript" width="70px" height="70px"/>
