--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
-  <link rel="shortcut icon" href="assets/logo.svg" type="image/svg">
+  <link rel="shortcut icon" href="assets/logo.png" type="image/svg">
 </head>
 
 <body>
   <header>
     <div class="ctn-header">
       <div>
-        <a href="#hero" class="logo" translate="no">andev.<b>code</b></a>
+        <a href="#hero" class="logo" translate="no"><img src="assets/logo.png" alt="logo"></a>
       </div>
 
       <nav class="menu">
@@ -223,7 +223,8 @@
   <footer>
     <article class="info">
       <div class="logo-ctn">
-        <span class="logo" translate="no">andev.<b>code</b></span>
+        <img src="assets/logo.png" alt="logo">
+        <h2>andev.<b>code</b></h2>
       </div>
 
       <p>Desarrollador que le <b>apasiona</b> crear <b>soluciones</b></p>
