fix icons on about

--- a/index.html
+++ b/index.html
@@ -206,15 +206,15 @@
       </article>
 
       <nav class="social">
-        <a href="https://t.me/andev_code" target="_blank"><img src="assets/Icons/telegram.svg" alt="telegram logo">Telegram</a>
+        <a href="https://t.me/andev_code" target="_blank"><img src="assets/Icons/telegram.svg" alt="telegram logo"></a>
 
-        <a href="https://github.com/andev-code" target="_blank"><img src="assets/Icons/github.svg" alt="github logo">Github</a>
+        <a href="https://github.com/andev-code" target="_blank"><img src="assets/Icons/github.svg" alt="github logo"></a>
 
-        <a href="https://linkedin.com/in/andev-code" target="_blank"><img src="assets/Icons/linkedin.svg" alt="linkedin logo">Linkedin</a>
+        <a href="https://linkedin.com/in/andev-code" target="_blank"><img src="assets/Icons/linkedin.svg" alt="linkedin logo"></a>
 
-        <a href="https://twitter.com/andev_code" target="_blank"><img src="assets/Icons/twitter.svg" alt="twitter logo">X</a>
+        <a href="https://twitter.com/andev_code" target="_blank"><img src="assets/Icons/twitter.svg" alt="twitter logo"></a>
 
-        <a href="https://instagram.com/andev_code" target="_blank"><img src="assets/Icons/instagram.svg" alt="instagram logo">Instagram</a>
+        <a href="https://instagram.com/andev_code" target="_blank"><img src="assets/Icons/instagram.svg" alt="instagram logo"></a>
       </nav>
     </section>
   </main>
